--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build: .
     volumes:
       - "./:/app"
-    command: bash -c 'bin/rails s -p 3000 -b "0.0.0.0"'
+    command: bash -c 'bundle exec falcon serve -p 3000 -b "http://0.0.0.0"'
     ports:
       - "3000:3000"
     depends_on:
